--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/filament": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-honeypot": "^4.5",
         "spatie/laravel-medialibrary": "^11.11",
         "spatie/laravel-sitemap": "^7.3"
     },
