--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -66,3 +66,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 MEDIA_DISK=media
+
+ADMIN_NAME="Admin"
+ADMIN_EMAIL="admin@example.org"
+ADMIN_PASSWORD="test12345!!!"
