--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "archtechx/laravel-seo": "^0.10.2",
         "cviebrock/eloquent-sluggable": "^11.0",
         "filament/filament": "^3.2",
+        "intervention/image": "^3.10",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "spatie/laravel-honeypot": "^4.5",
