--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-intl" : "*",
         "archtechx/laravel-seo": "^0.10.2",
         "cviebrock/eloquent-sluggable": "^11.0",
         "filament/filament": "^3.2",
