--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "ext-intl" : "*",
+        "ext-intl": "*",
         "archtechx/laravel-seo": "^0.10.2",
         "cviebrock/eloquent-sluggable": "^11.0",
         "filament/filament": "^3.2",
+        "filament/spatie-laravel-media-library-plugin": "^3.2",
         "intervention/image": "^3.10",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
