--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "spatie/laravel-honeypot": "^4.5",
+        "spatie/laravel-markdown": "^2.7",
         "spatie/laravel-medialibrary": "^11.11",
         "spatie/laravel-sitemap": "^7.3"
     },
