--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "intervention/image": "^3.10",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "mailjet/laravel-mailjet": "^3.1",
         "spatie/laravel-honeypot": "^4.5",
         "spatie/laravel-markdown": "^2.7",
         "spatie/laravel-medialibrary": "^11.11",
